Move catalog out of ID
